[package]
name = "dxfexports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxf = "0.5.0"
lyon = { version = "1.0.1", optional = true }
svg = { version = "0.15.0", optional = true }
geo = { version = "0.27.0", optional = true }
geo-types = { version = "0.7.12", optional = true }

[features]
default = ["geo_types", "lyon_path", "svg"]
geo_types = ["dep:geo-types", "dep:lyon", "dep:geo"]
lyon_path = ["dep:lyon"]
svg = ["dep:svg"]
